{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 19,
  "lineage": "ac32e8f4-7851-a4f5-7165-b23471090dc1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fb2282b10c0012c",
            "arn": "arn:aws:ec2:ap-south-1:120121146771:elastic-ip/eipalloc-08fb2282b10c0012c",
            "association_id": "eipassoc-05dd69c0ce75b4e8f",
            "domain": "vpc",
            "id": "eipalloc-08fb2282b10c0012c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ac25108c1284af04",
            "private_dns": "ip-10-0-1-242.ap-south-1.compute.internal",
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-13-202-48-183.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.48.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Anshul_Sharma_nat_eip"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_nat_eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:120121146771:internet-gateway/igw-00db3c01ea40df1a7",
            "id": "igw-00db3c01ea40df1a7",
            "owner_id": "120121146771",
            "tags": {
              "Name": "Anshul_Sharma_igw"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_igw"
            },
            "vpc_id": "vpc-0f50c694b5d9a253b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fb2282b10c0012c",
            "association_id": "eipassoc-05dd69c0ce75b4e8f",
            "connectivity_type": "public",
            "id": "nat-06d68f0c948d324a2",
            "network_interface_id": "eni-0ac25108c1284af04",
            "private_ip": "10.0.1.242",
            "public_ip": "13.202.48.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0adc778612111f3e0",
            "tags": {
              "Name": "Anshul_Sharma_nat_gw"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_nat_gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:120121146771:route-table/rtb-073121fe07b5bff99",
            "id": "rtb-073121fe07b5bff99",
            "owner_id": "120121146771",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d68f0c948d324a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Anshul_Sharma_private_rt"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f50c694b5d9a253b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:120121146771:route-table/rtb-0b46fe23e28871e98",
            "id": "rtb-0b46fe23e28871e98",
            "owner_id": "120121146771",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00db3c01ea40df1a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Anshul_Sharma_public_rt"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f50c694b5d9a253b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07db07cf2c20d1ae0",
            "route_table_id": "rtb-073121fe07b5bff99",
            "subnet_id": "subnet-04a4cf2a70064d816"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aff18c8b8f4e97cd",
            "route_table_id": "rtb-073121fe07b5bff99",
            "subnet_id": "subnet-0b1fcdcb66244f693"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07786ac0b6ade123d",
            "route_table_id": "rtb-0b46fe23e28871e98",
            "subnet_id": "subnet-0adc778612111f3e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0638a3dc194144206",
            "route_table_id": "rtb-0b46fe23e28871e98",
            "subnet_id": "subnet-06553c08cba504aab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:120121146771:subnet/subnet-04a4cf2a70064d816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a4cf2a70064d816",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120121146771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Anshul_Sharma_private_subnet_a"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_private_subnet_a"
            },
            "vpc_id": "vpc-0f50c694b5d9a253b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:120121146771:subnet/subnet-0b1fcdcb66244f693",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1fcdcb66244f693",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120121146771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Anshul_Sharma_private_subnet_b"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_private_subnet_b"
            },
            "vpc_id": "vpc-0f50c694b5d9a253b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:120121146771:subnet/subnet-0adc778612111f3e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adc778612111f3e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "120121146771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Anshul_Sharma_public_subnet_a"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_public_subnet_a"
            },
            "vpc_id": "vpc-0f50c694b5d9a253b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:120121146771:subnet/subnet-06553c08cba504aab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06553c08cba504aab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "120121146771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Anshul_Sharma_public_subnet_b"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_public_subnet_b"
            },
            "vpc_id": "vpc-0f50c694b5d9a253b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:120121146771:vpc/vpc-0f50c694b5d9a253b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08da8a4f91ddea8a0",
            "default_route_table_id": "rtb-0b823acd60d3e7bf6",
            "default_security_group_id": "sg-0ba4ce5f072f1ef50",
            "dhcp_options_id": "dopt-09d49da6fdb892e49",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f50c694b5d9a253b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b823acd60d3e7bf6",
            "owner_id": "120121146771",
            "tags": {
              "Name": "Anshul_Sharma_vpc"
            },
            "tags_all": {
              "Name": "Anshul_Sharma_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}